--- a/public/index.html
+++ b/public/index.html
@@ -7,15 +7,25 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Отель у моря в Адлере с бассейном, Wi-Fi и завтраками. Номера с видом на море, парковка, трансфер. Бронируйте отдых в Адлере по выгодной цене!"
+      content="Море — комфортный отель в Адлере у самого моря. Номера с видом, бассейн, бесплатный Wi-Fi, трансфер, парковка и вкусные завтраки включены."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta
+      property="og:title"
+      content="Отель Adlermore у моря в Адлере — отдых с комфортом"
+    />
+    <meta
+      property="og:description"
+      content="Бассейн, Wi-Fi, парковка, завтраки и вид на море. Бронируйте номер в Adlermore — идеальный отдых в Адлере!"
+    />
+    <meta property="og:image" content="https://Adlermore.ru/img/logo.png" />
+    <meta property="og:url" content="https://Adlermore.ru" />
+    <meta property="og:type" content="website" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/img/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Adlermore</title>
+    <title>Отель у моря в Адлере с бассейном и Wi-Fi — Море</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
