--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/img/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Отель у моря в Адлере с бассейном и Wi-Fi — Море</title>
+    <title>Отдых у моря в Адлере с бассейном — отель Море</title>
   </head>
   <body>
     <div id="root"></div>
