--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-Q8QPV5VEGN"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-Q8QPV5VEGN");
+    </script>
     <meta charset="utf-8" />
     <link rel="icon" href="./img//logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
