--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,10 @@
     </script>
     <meta charset="utf-8" />
     <link rel="icon" href="./img//logo.png" />
+    <meta
+      name="keywords"
+      content="Море, отель у Моря, гостиница у Моря, отель возле моря в Адлере, отдых в Адлере, отель у моря, гостиница Адлер, отдых на Черном море, отель с бассейном, просторные номера, семейный отдых, 5 минут до моря"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
