--- a/public/index.html
+++ b/public/index.html
@@ -29,11 +29,11 @@
     />
     <meta
       property="og:title"
-      content="Отель Adlermore у моря в Адлере — отдых с комфортом"
+      content="Отель Море у моря в Адлере — отдых с комфортом"
     />
     <meta
       property="og:description"
-      content="Бассейн, Wi-Fi, парковка, завтраки и вид на море. Бронируйте номер в Adlermore — идеальный отдых в Адлере!"
+      content="Бассейн, Wi-Fi, парковка, завтраки и вид на море. Бронируйте номер в Море — идеальный отдых в Адлере!"
     />
     <meta property="og:image" content="https://Adlermore.ru/img/logo.png" />
     <meta property="og:url" content="https://Adlermore.ru" />
